tests/snapshots/getopts__basic_optstring.snap
---
source: tests/getopts.rs
expression: output
---
claptrap_a=true
claptrap_b=val
claptrap_c=false
