tests/snapshots/getopts__parse_basic_spec.snap
---
source: tests/getopts.rs
expression: cmd
---
Command {
    name: "prog",
    args: Some(
        {
            "a": Arg {
                id: None,
                short: Some(
                    'a',
                ),
                long: None,
                alias: None,
                short_alias: None,
                aliases: None,
                short_aliases: None,
                visible_alias: None,
                visible_short_alias: None,
                visible_aliases: None,
                visible_short_aliases: None,
                index: None,
                trailing_var_arg: None,
                last: None,
                required: None,
                requires: None,
                exclusive: None,
                global: None,
                action: Some(
                    SetTrue,
                ),
                value_parser: None,
                num_args: None,
                value_name: None,
                value_names: None,
                value_hint: None,
                ignore_case: None,
                allow_hyphen_values: None,
                allow_negative_numbers: None,
                require_equals: None,
                value_delimiter: None,
                value_terminator: None,
                raw: None,
                default_value: None,
                default_values: None,
                default_missing_value: None,
                default_missing_value_os: None,
                default_missing_values: None,
                default_missing_values_os: None,
                env: None,
                help: None,
                long_help: None,
                display_order: None,
                help_heading: None,
                next_line_help: None,
                hide: None,
                hide_possible_values: None,
                hide_default_value: None,
                hide_env: None,
                hide_env_values: None,
                hide_short_help: None,
                hide_long_help: None,
                group: None,
                groups: None,
                required_unless_present: None,
                required_unless_present_all: None,
                required_unless_present_any: None,
                conflicts_with: None,
                conflicts_with_all: None,
                overrides_with: None,
                overrides_with_all: None,
            },
            "b": Arg {
                id: None,
                short: Some(
                    'b',
                ),
                long: None,
                alias: None,
                short_alias: None,
                aliases: None,
                short_aliases: None,
                visible_alias: None,
                visible_short_alias: None,
                visible_aliases: None,
                visible_short_aliases: None,
                index: None,
                trailing_var_arg: None,
                last: None,
                required: None,
                requires: None,
                exclusive: None,
                global: None,
                action: Some(
                    Set,
                ),
                value_parser: None,
                num_args: Some(
                    Exact(
                        1,
                    ),
                ),
                value_name: None,
                value_names: None,
                value_hint: None,
                ignore_case: None,
                allow_hyphen_values: None,
                allow_negative_numbers: None,
                require_equals: None,
                value_delimiter: None,
                value_terminator: None,
                raw: None,
                default_value: None,
                default_values: None,
                default_missing_value: None,
                default_missing_value_os: None,
                default_missing_values: None,
                default_missing_values_os: None,
                env: None,
                help: None,
                long_help: None,
                display_order: None,
                help_heading: None,
                next_line_help: None,
                hide: None,
                hide_possible_values: None,
                hide_default_value: None,
                hide_env: None,
                hide_env_values: None,
                hide_short_help: None,
                hide_long_help: None,
                group: None,
                groups: None,
                required_unless_present: None,
                required_unless_present_all: None,
                required_unless_present_any: None,
                conflicts_with: None,
                conflicts_with_all: None,
                overrides_with: None,
                overrides_with_all: None,
            },
            "c": Arg {
                id: None,
                short: Some(
                    'c',
                ),
                long: None,
                alias: None,
                short_alias: None,
                aliases: None,
                short_aliases: None,
                visible_alias: None,
                visible_short_alias: None,
                visible_aliases: None,
                visible_short_aliases: None,
                index: None,
                trailing_var_arg: None,
                last: None,
                required: None,
                requires: None,
                exclusive: None,
                global: None,
                action: Some(
                    Set,
                ),
                value_parser: None,
                num_args: Some(
                    RangeToInclusive(
                        ..=1,
                    ),
                ),
                value_name: None,
                value_names: None,
                value_hint: None,
                ignore_case: None,
                allow_hyphen_values: None,
                allow_negative_numbers: None,
                require_equals: None,
                value_delimiter: None,
                value_terminator: None,
                raw: None,
                default_value: None,
                default_values: None,
                default_missing_value: None,
                default_missing_value_os: None,
                default_missing_values: None,
                default_missing_values_os: None,
                env: None,
                help: None,
                long_help: None,
                display_order: None,
                help_heading: None,
                next_line_help: None,
                hide: None,
                hide_possible_values: None,
                hide_default_value: None,
                hide_env: None,
                hide_env_values: None,
                hide_short_help: None,
                hide_long_help: None,
                group: None,
                groups: None,
                required_unless_present: None,
                required_unless_present_all: None,
                required_unless_present_any: None,
                conflicts_with: None,
                conflicts_with_all: None,
                overrides_with: None,
                overrides_with_all: None,
            },
        },
    ),
    subcommands: None,
    groups: None,
    ignore_errors: None,
    args_override_self: None,
    dont_delimit_trailing_values: None,
    color: None,
    term_width: None,
    max_term_width: None,
    disable_version_flag: None,
    propagate_version: None,
    next_line_help: None,
    disable_help_flag: None,
    disable_help_subcommand: None,
    disable_colored_help: None,
    help_expected: None,
    hide_possible_values: None,
    infer_long_args: None,
    infer_subcommands: None,
    bin_name: None,
    display_name: None,
    author: None,
    about: None,
    long_about: None,
    after_help: None,
    after_long_help: None,
    before_help: None,
    before_long_help: None,
    version: None,
    long_version: None,
    override_usage: None,
    override_help: None,
    help_template: None,
    flatten_help: None,
    next_help_heading: None,
    next_display_order: None,
    arg_required_else_help: None,
    allow_missing_positional: None,
    short_flag: None,
    long_flag: None,
    alias: None,
    short_flag_alias: None,
    long_flag_alias: None,
    aliases: None,
    short_flag_aliases: None,
    long_flag_aliases: None,
    visible_alias: None,
    visible_short_flag_alias: None,
    visible_long_flag_alias: None,
    visible_aliases: None,
    visible_short_flag_aliases: None,
    visible_long_flag_aliases: None,
    display_order: None,
    hide: None,
    subcommand_required: None,
    allow_external_subcommands: None,
    args_conflicts_with_subcommands: None,
    subcommand_precedence_over_arg: None,
    subcommand_negates_reqs: None,
    multicall: None,
    subcommand_value_name: None,
    subcommand_help_heading: None,
}
