tests/snapshots/getopts__parse_getopts.snap
---
source: tests/getopts.rs
expression: output
---
claptrap_a='true'
claptrap_b='file'
claptrap_c='opt'
