tests/snapshots/getopts__parse_leading_colon_only.snap
---
source: tests/getopts.rs
expression: cmd
---
Command {
    name: "prog",
    args: None,
    subcommands: None,
    groups: None,
    ignore_errors: None,
    args_override_self: None,
    dont_delimit_trailing_values: None,
    color: None,
    term_width: None,
    max_term_width: None,
    disable_version_flag: None,
    propagate_version: None,
    next_line_help: None,
    disable_help_flag: None,
    disable_help_subcommand: None,
    disable_colored_help: None,
    help_expected: None,
    hide_possible_values: None,
    infer_long_args: None,
    infer_subcommands: None,
    bin_name: None,
    display_name: None,
    author: None,
    about: None,
    long_about: None,
    after_help: None,
    after_long_help: None,
    before_help: None,
    before_long_help: None,
    version: None,
    long_version: None,
    override_usage: None,
    override_help: None,
    help_template: None,
    flatten_help: None,
    next_help_heading: None,
    next_display_order: None,
    arg_required_else_help: None,
    allow_missing_positional: None,
    short_flag: None,
    long_flag: None,
    alias: None,
    short_flag_alias: None,
    long_flag_alias: None,
    aliases: None,
    short_flag_aliases: None,
    long_flag_aliases: None,
    visible_alias: None,
    visible_short_flag_alias: None,
    visible_long_flag_alias: None,
    visible_aliases: None,
    visible_short_flag_aliases: None,
    visible_long_flag_aliases: None,
    display_order: None,
    hide: None,
    subcommand_required: None,
    allow_external_subcommands: None,
    args_conflicts_with_subcommands: None,
    subcommand_precedence_over_arg: None,
    subcommand_negates_reqs: None,
    multicall: None,
    subcommand_value_name: None,
    subcommand_help_heading: None,
}
